# f1tenth_r2

./: .gitignore  .gitmodules  README.md  TODO.md  activate_framework.sh  setup.py  setup_framework.sh  start_car.sh
aimotion_f1tenth_r2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aimotion_fleet_manager/: .gitignore  __init__.py  installer_ui.py  main_ui.py  radio_streamer.py  ros_classes.py  setup.py  trajectory_client.py
aimotion_fleet_manager/new_ui/: installer_ui.py
aimotion_fleet_manager/utils/: Remote_Controller.py  TCP_process.py  ip_tool.py  logging_formater.py  radio_process.py  ros_classes.py
configs/: JoeBush1.yaml  JoeBush1_login.yaml  Template.yaml  param.yaml
docs/: hardware_architecture.md  modelling.md  software_installation.md  software_installation_new.md
f1_PC/Kristof_log/: forward_005.csv  forward_007.csv  forward_009.csv  forward_011.csv  forward_013.csv  forward_015.csv  forward_017.csv  forward_019.csv  reverse_005.csv  reverse_007.csv  reverse_009.csv  reverse_011.csv  reverse_013.csv  reverse_015.csv  reverse_017.csv  reverse_019.csv
f1_PC/scripts/: JoeBushJr.yaml  Parameter_editor.py  Path.py  Remote_Controller.py  car_reboot.py  car_run.py  car_sync.py  crazy_observer.py  (+18 more)
ros2/f1_car/src/drive_bridge/: package.xml  setup.py
ros2/f1_car/src/drive_bridge/config/: param.yaml
ros2/f1_car/src/drive_bridge/drive_bridge/: drive_bridge.py
sphinx_docs/: aimotion_f1tenth_utils.rst  aimotion_fleet_manager.utils.rst  conf.py  index.rst
table_of_contents/: working_with_vehicles.md
trajectories/: traj_points.npy
(+131 files in other folders)
